some cleanup. All instances of Jsesh -> JSesh